--- a/components/llm.ipynb
+++ b/components/llm.ipynb
@@ -104,6 +104,151 @@
     "\n",
     "ADAPTER ./\n",
     "\n",
+    "TEMPLATE \"\"\"{{ if .System }}{{ .System }}{{ end }}\n",
+    "\n",
+    "{{ if .Prompt }}### Instruction:\n",
+    "{{ .Prompt }}{{ end }}\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "Consider the following usability aspects:\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "Objective: [Describe the objective] \n",
+    "~ Preconditions: [List preconditions, use dashes] \n",
+    "~ Test Steps: [Step-by-step guide] \n",
+    "~ Expected Output: [Describe the expected output, use dashes]\n",
+    "\n",
+    "### Response:\n",
+    "{{ .Response }}\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER temperature 0\n",
+    "PARAMETER num_predict 2048\n",
+    "\n",
+    "PARAMETER stop \"Note:\"\n",
+    "PARAMETER stop \"The final answer is:\"\n",
+    "PARAMETER stop \"The expected output should be displayed correctly for all test steps above.\"\n",
+    "PARAMETER stop \"EOF\"\n",
+    "PARAMETER stop \"###\"\n",
+    "PARAMETER stop \"End of Response\"\n",
+    "PARAMETER stop \"```\"\n",
+    "\n",
+    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Alpaca Format:\n",
+    "\n",
+    "\"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{}\n",
+    "\n",
+    "### Input:\n",
+    "{}\n",
+    "\n",
+    "### Response:\n",
+    "{}\"\"\""
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "Generate a functional usability test case for the following UI element: Heading Element (h2): 'Athletics' from the website: https://www.stanford.edu/\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "Consider the following usability aspects:\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "Objective: [Describe the objective] \n",
+    "~ Preconditions: [List preconditions, use dashes] \n",
+    "~ Test Steps: [Step-by-step guide] \n",
+    "~ Expected Output: [Describe the expected output, use dashes]\n",
+    "\n",
+    "### Response:\n",
+    "Verify that the Heading Element 'Athletics' is accessible and provides clear feedback on hover.\n",
+    "~ - Navigate to https://www.stanford.edu/\n",
+    "- Ensure keyboard navigation is enabled\n",
+    "- Screen reader (e.g., NVDA) is running in the background\n",
+    "~ 1. Press `Tab` until focus is on the Heading Element 'Athletics'.\n",
+    "2. Verify that the element is announced by the screen reader.\n",
+    "3. Move mouse over the Heading Element 'Athletics'.\n",
+    "4. Observe if a hover effect (e.g., color change, underline) appears.\n",
+    "5. Click on the Heading Element 'Athletics' with the mouse.\n",
+    "6. Verify that the click response is clear and consistent.\n",
+    "~ - The screen reader announces the text \"Athletics\" correctly when focus is on it.\n",
+    "- A hover effect (e.g., color change, underline) is visible when moving the mouse over the element.\n",
+    "- Clicking on the element results in a clear and consistent visual response (e.g., animation, color change).<|end_of_text|>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "## What follows are trials and errors on modelfile creation"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
     "TEMPLATE \"\"\"{{ if .System }}{{ .System }}\n",
     "\n",
     "{{ end }}{{ if .Prompt }}### Instruction:\n",
@@ -156,8 +301,271 @@
     }
    },
    "source": [
-    "Additional parameters that may help prevent"
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
+    "TEMPLATE \"\"\"{{ if .System }}{{ .System }}\n",
+    "{{ end }}\n",
+    "\n",
+    "{{ if .Prompt }}### Instruction:\n",
+    "{{ .Prompt }}\n",
+    "{{ end }}\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "Consider the following usability aspects:\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "Objective: [Describe the objective] \n",
+    "~ Preconditions: [List preconditions, use dashes] \n",
+    "~ Test Steps: [Step-by-step guide] \n",
+    "~ Expected Output: [Describe the expected output, use dashes]\n",
+    "\n",
+    "### Response:\n",
+    "{{ .Response }}\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER stop \"Note:\"\n",
+    "PARAMETER stop \"EOF\"\n",
+    "PARAMETER stop \"###\"\n",
+    "PARAMETER stop \"End of Response\"\n",
+    "PARAMETER stop \"The final answer is:\"\n",
+    "PARAMETER stop \"The expected output should be displayed correctly for all test steps above.\"\n",
+    "PARAMETER temperature 0\n",
+    "PARAMETER num_predict 2048\n",
+    "\n",
+    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
    ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Example Inputs:\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
+    "Generate test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Clickable Button Element 'SEARCH' from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Input Field Element: 's' With Type search Is Editable from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Link Element Without Name (might be an image) With URL https://cis.edu.ph/  With rel attribute home from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Link Element 'LEARN' With URL https://cis.edu.ph/community/newsflash/#   from the website: https://cis.edu.ph/community/newsflash/"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "TEMPLATE \"\"\"{{- if or .System .Tools }}<|start_header_id|>system<|end_header_id|>\n",
+    "{{- if .System }}\n",
+    "\n",
+    "{{ .System }}\n",
+    "{{- end }}\n",
+    "{{- if .Tools }}\n",
+    "\n",
+    "Cutting Knowledge Date: December 2023\n",
+    "\n",
+    "When you receive a tool call response, use the output to format an answer to the orginal user question.\n",
+    "\n",
+    "You are a helpful assistant with tool calling capabilities.\n",
+    "{{- end }}<|eot_id|>\n",
+    "{{- end }}\n",
+    "{{- range $i, $_ := .Messages }}\n",
+    "{{- $last := eq (len (slice $.Messages $i)) 1 }}\n",
+    "{{- if eq .Role \"user\" }}<|start_header_id|>user<|end_header_id|>\n",
+    "{{- if and $.Tools $last }}\n",
+    "\n",
+    "Given the following functions, please respond with a JSON for a function call with its proper arguments that best answers the given prompt.\n",
+    "\n",
+    "Respond in the format {\"name\": function name, \"parameters\": dictionary of argument name and its value}. Do not use variables.\n",
+    "\n",
+    "{{ range $.Tools }}\n",
+    "{{- . }}\n",
+    "{{ end }}\n",
+    "Question: {{ .Content }}<|eot_id|>\n",
+    "{{- else }}\n",
+    "\n",
+    "{{ .Content }}<|eot_id|>\n",
+    "{{- end }}{{ if $last }}<|start_header_id|>assistant<|end_header_id|>\n",
+    "\n",
+    "{{ end }}\n",
+    "{{- else if eq .Role \"assistant\" }}<|start_header_id|>assistant<|end_header_id|>\n",
+    "{{- if .ToolCalls }}\n",
+    "{{ range .ToolCalls }}\n",
+    "{\"name\": \"{{ .Function.Name }}\", \"parameters\": {{ .Function.Arguments }}}{{ end }}\n",
+    "{{- else }}\n",
+    "\n",
+    "{{ .Content }}\n",
+    "{{- end }}{{ if not $last }}<|eot_id|>{{ end }}\n",
+    "{{- else if eq .Role \"tool\" }}<|start_header_id|>ipython<|end_header_id|>\n",
+    "\n",
+    "{{ .Content }}<|eot_id|>{{ if $last }}<|start_header_id|>assistant<|end_header_id|>\n",
+    "\n",
+    "{{ end }}\n",
+    "{{- end }}\n",
+    "{{- end }}\"\"\"\n",
+    "PARAMETER stop <|start_header_id|>\n",
+    "PARAMETER stop <|end_header_id|>\n",
+    "PARAMETER stop <|eot_id|>"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    ">>> Generate a functional usability test case for the following UI element: Input Field Elemen\n",
+    "... t: 's' With Type search Is Editable from the website: https://cis.edu.ph/community/newsfla\n",
+    "... sh/\n",
+    "Objective: Verify that the input field element 's' with type search is editable and\n",
+    "provides correct feedback when interacted with.\n",
+    "\n",
+    "~ Preconditions: - The website https://cis.edu.ph/community/newsflash/ must be loaded in\n",
+    "a compatible browser. - The webpage must have a minimum width of 1024 pixels to ensure\n",
+    "proper layout and responsiveness.\n",
+    "~ Test Steps:\n",
+    "1. Open the website https://cis.edu.ph/community/newsflash/ in Google Chrome.\n",
+    "2. Press 'Ctrl + Shift + F' (Windows) or 'Cmd + Opt + F' (Mac) to open developer tools\n",
+    "and select the 'Elements' tab.\n",
+    "3. In the Elements tab, navigate to the input field element with id 's' and verify its\n",
+    "type is set to 'search'.\n",
+    "4. Use keyboard navigation by pressing 'Tab' key until the focus is on the search input\n",
+    "field.\n",
+    "5. Type a random string of 10 characters into the search input field and press 'Enter'.\n",
+    "6. Verify that the search input field accepts the typed-in text without any errors.\n",
+    "7. Click on the search input field to remove its focus and then click again to set focus\n",
+    "back on it.\n",
+    "8. Verify that the search input field remains focused with a blue border around it.\n",
+    "9. Use mouse navigation by clicking on the search input field and verify that it becomes\n",
+    "focused with a blue border around it.\n",
+    "10. Type a random string of 10 characters into the search input field using keyboard\n",
+    "navigation and press 'Enter'.\n",
+    "11. Verify that the search input field accepts the typed-in text without any errors.\n",
+    "~ Expected Output:\n",
+    "- The input field element 's' with type set to 'search' is editable and accepts user\n",
+    "input.\n",
+    "- When the search input field is focused, it should have a blue border around it.\n",
+    "- When the user presses 'Enter', the webpage does not crash or produce any errors.\n",
+    "- The search input field provides correct feedback when interacted with."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "ollama run qallamaa_0temp\n",
+    ">>> Generate a functional usability test case for the following UI element: Input Field Elemen\n",
+    "... t: 's' With Type search Is Editable from the website: https://cis.edu.ph/community/newsfla\n",
+    "... sh/\n",
+    "Objective: Verify that the 's' input field with type search is editable and provides a\n",
+    "clear feedback when focused or clicked.\n",
+    "\n",
+    "~ Preconditions: The website https://cis.edu.ph/community/newsflash/ is fully loaded in\n",
+    "a browser. The browser's zoom level is set to 100%. The keyboard navigation is enabled.\n",
+    "A screen reader (e.g., NVDA) is running in the background. The browser's developer tools\n",
+    "are not open.\n",
+    "\n",
+    "~ Test Steps:\n",
+    "- Open the website https://cis.edu.ph/community/newsflash/ in a browser.\n",
+    "- Press the 'Tab' key until the focus is on the 's' input field with type search.\n",
+    "- Type 'test' into the input field using the keyboard.\n",
+    "- Press the 'Enter' key to simulate a form submission.\n",
+    "- Click on the input field using the mouse.\n",
+    "- Check if the input field has a clear hover effect when hovered over using the mouse.\n",
+    "- Check if the input field has a clear click response when clicked using the mouse.\n",
+    "- Check if the screen reader announces the input field's focus and content correctly.\n",
+    "- Check if the browser's developer tools do not open when interacting with the input\n",
+    "field.\n",
+    "\n",
+    "~ Expected Output:\n",
+    "- The 's' input field with type search is editable and allows typing into it using the\n",
+    "keyboard.\n",
+    "- When the 'Enter' key is pressed, the form submission is simulated, and a clear\n",
+    "feedback (e.g., a loading animation) is provided.\n",
+    "- When clicked using the mouse, a clear click response (e.g., a blue border around the\n",
+    "input field) is provided.\n",
+    "- When hovered over using the mouse, a clear hover effect (e.g., a blue background\n",
+    "color) is provided.\n",
+    "- The screen reader announces the input field's focus and content correctly when focused\n",
+    "or clicked.\n",
+    "- The browser's developer tools do not open when interacting with the input field."
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
