--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -251,7 +251,7 @@
     "from langchain_core.prompts import ChatPromptTemplate\n",
     "\n",
     "## Settings\n",
-    "TEMPLATE_SETTING = 0\n",
+    "TEMPLATE_SETTING = 1\n",
     "DEBUG_SETTING = 1\n",
     "\n",
     "## Template for non-finetuned Llama 3.1 8B model. Very Consistent\n",
@@ -417,9 +417,7 @@
     "\n",
     "## URLS \n",
     "# - Can only be 1 url\n",
-    "urls = ['https://bicol-u.edu.ph/', \n",
-    "        'https://www.dost.gov.ph/',\n",
-    "        'https://en.wikipedia.org/wiki/Main_Page']\n",
+    "urls = ['https://cis.edu.ph/community/newsflash/']\n",
     "\n",
     "## Clean URL Function\n",
     "# - Returns a cleaned url ready for filename assignment\n",
