some more dataset correction hotfixes

--- a/components/llm.ipynb
+++ b/components/llm.ipynb
@@ -93,6 +93,137 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "###### Main Modelfile"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
+    "TEMPLATE \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{{ .Prompt }}\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "Consider the following usability aspects:\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "Objective: [Describe the objective] \n",
+    "~ Preconditions: [List preconditions, use dashes] \n",
+    "~ Test Steps: [Step-by-step guide] \n",
+    "~ Expected Output: [Describe the expected output, use dashes]\n",
+    "\n",
+    "### Response:\n",
+    "{{ .Response }}\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER temperature 0\n",
+    "PARAMETER num_predict 2048\n",
+    "\n",
+    "PARAMETER stop \"Note:\"\n",
+    "PARAMETER stop \"The final answer is:\"\n",
+    "PARAMETER stop \"The expected output should be displayed correctly for all test steps above.\"\n",
+    "PARAMETER stop \"EOF\"\n",
+    "PARAMETER stop \"###\"\n",
+    "PARAMETER stop \"End of Response\"\n",
+    "PARAMETER stop \"```\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Alternative Modelfile"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {},
+   "source": []
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Alpaca Format:\n",
+    "\n",
+    "\"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
+    "\n",
+    "### Instruction:\n",
+    "{}\n",
+    "\n",
+    "### Input:\n",
+    "{}\n",
+    "\n",
+    "### Response:\n",
+    "{}\"\"\""
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "Example Inputs:\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
+    "Generate test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Clickable Button Element 'SEARCH' from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Input Field Element: 's' With Type search Is Editable from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Link Element Without Name (might be an image) With URL https://cis.edu.ph/  With rel attribute home from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a functional usability test case for the following UI element: Link Element 'LEARN' With URL https://cis.edu.ph/community/newsflash/#   from the website: https://cis.edu.ph/community/newsflash/"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "## What follows are trials and errors on modelfile creation"
+   ]
+  },
+  {
    "cell_type": "raw",
    "metadata": {
     "vscode": {
@@ -159,28 +290,6 @@
     }
    },
    "source": [
-    "Alpaca Format:\n",
-    "\n",
-    "\"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
-    "\n",
-    "### Instruction:\n",
-    "{}\n",
-    "\n",
-    "### Input:\n",
-    "{}\n",
-    "\n",
-    "### Response:\n",
-    "{}\"\"\""
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
     "Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
     "\n",
     "### Instruction:\n",
@@ -224,17 +333,6 @@
     "~ - The screen reader announces the text \"Athletics\" correctly when focus is on it.\n",
     "- A hover effect (e.g., color change, underline) is visible when moving the mouse over the element.\n",
     "- Clicking on the element results in a clear and consistent visual response (e.g., animation, color change).<|end_of_text|>"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "## What follows are trials and errors on modelfile creation"
    ]
   },
   {
@@ -359,51 +457,6 @@
      "languageId": "raw"
     }
    },
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
-   "source": [
-    "Example Inputs:\n",
-    "\n",
-    "Generate a functional usability test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
-    "Generate test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
-    "\n",
-    "Generate a functional usability test case for the following UI element: Clickable Button Element 'SEARCH' from the website: https://cis.edu.ph/community/newsflash/\n",
-    "\n",
-    "Generate a functional usability test case for the following UI element: Input Field Element: 's' With Type search Is Editable from the website: https://cis.edu.ph/community/newsflash/\n",
-    "\n",
-    "Generate a functional usability test case for the following UI element: Link Element Without Name (might be an image) With URL https://cis.edu.ph/  With rel attribute home from the website: https://cis.edu.ph/community/newsflash/\n",
-    "\n",
-    "Generate a functional usability test case for the following UI element: Link Element 'LEARN' With URL https://cis.edu.ph/community/newsflash/#   from the website: https://cis.edu.ph/community/newsflash/"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {
-    "vscode": {
-     "languageId": "raw"
-    }
-   },
    "source": [
     "TEMPLATE \"\"\"{{- if or .System .Tools }}<|start_header_id|>system<|end_header_id|>\n",
     "{{- if .System }}\n",
@@ -457,11 +510,6 @@
     "PARAMETER stop <|end_header_id|>\n",
     "PARAMETER stop <|eot_id|>"
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "raw",
@@ -551,16 +599,6 @@
     "or clicked.\n",
     "- The browser's developer tools do not open when interacting with the input field."
    ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
   },
   {
    "cell_type": "raw",
