--- a/components/llm.ipynb
+++ b/components/llm.ipynb
@@ -111,6 +111,73 @@
     "\n",
     "ADAPTER ./\n",
     "\n",
+    "TEMPLATE \"\"\"<|begin_of_text|>{{ if .System }}{{ .System }}{{ end }}\n",
+    "\n",
+    "{{ if .Prompt }}### Instruction:\n",
+    "{{ .Prompt }}{{ end }}\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "Consider the following usability aspects:\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "Objective: [Describe the objective] \n",
+    "~ Preconditions: [List preconditions, use dashes] \n",
+    "~ Test Steps: [Step-by-step guide] \n",
+    "~ Expected Output: [Describe the expected output, use dashes]\n",
+    "\n",
+    "### Response:\n",
+    "{{ .Response }}<|end_of_text|>\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"<|begin_of_text|>\"\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER temperature 0\n",
+    "PARAMETER num_predict 2048\n",
+    "\n",
+    "PARAMETER stop \"Note:\"\n",
+    "PARAMETER stop \"The final answer is:\"\n",
+    "PARAMETER stop \"The expected output should be displayed correctly for all test steps above.\"\n",
+    "PARAMETER stop \"EOF\"\n",
+    "PARAMETER stop \"###\"\n",
+    "PARAMETER stop \"End of Response\"\n",
+    "PARAMETER stop \"```\"\n",
+    "\n",
+    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "##### Alternative Modelfile"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
     "TEMPLATE \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\n",
     "\n",
     "### Instruction:\n",
@@ -157,18 +224,6 @@
    ]
   },
   {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "##### Alternative Modelfile"
-   ]
-  },
-  {
-   "cell_type": "raw",
-   "metadata": {},
-   "source": []
-  },
-  {
    "cell_type": "raw",
    "metadata": {
     "vscode": {
@@ -201,7 +256,9 @@
     "Example Inputs:\n",
     "\n",
     "Generate a functional usability test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
-    "Generate test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
+    "Generate a test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://cis.edu.ph/community/newsflash/\n",
+    "\n",
+    "Generate a test case for the following UI element: Clickable Button Element Without Name (might be an image) from the website: https://www.alverno.edu/\n",
     "\n",
     "Generate a functional usability test case for the following UI element: Clickable Button Element 'SEARCH' from the website: https://cis.edu.ph/community/newsflash/\n",
     "\n",
