--- a/fine_tuning/fine_tuning_notebook.ipynb
+++ b/fine_tuning/fine_tuning_notebook.ipynb
@@ -38,8 +38,7 @@
     "    !pip install unsloth\n",
     "else:\n",
     "    # Do this only in Colab notebooks! Otherwise use pip install unsloth\n",
-    "    !pip install --no-deps bitsandbytes accelerate xformers==0.0.29 peft trl triton\n",
-    "    !pip install --no-deps cut_cross_entropy unsloth_zoo\n",
+    "    !pip install --no-deps bitsandbytes accelerate xformers==0.0.29.post3 peft trl triton cut_cross_entropy unsloth_zoo\n",
     "    !pip install sentencepiece protobuf datasets huggingface_hub hf_transfer\n",
     "    !pip install --no-deps unsloth"
    ]
