added remembered references / credits

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "##### Prompt Generator Component\n",
-    "- Purpose (Latest / Final Version): based on scraped data, create a prompt for each scraped data and feed it to the LLM"
+    "- Purpose (Latest / Final Version): based on scraped data, create a prompt for each scraped data and feed it to the LLM\n",
+    "- References : OllamaLLM https://python.langchain.com/docs/integrations/llms/ollama/ "
    ]
   },
   {
