--- a/components/scraper.ipynb
+++ b/components/scraper.ipynb
@@ -6,7 +6,16 @@
    "source": [
     "##### Scraper Component\n",
     "- Purpose (Latest / Final Version): Scrape a website by creating a list of ui elements and their sub-ids\n",
-    "- Requires Selenium"
+    "- Requires Selenium\n",
+    "- References:\n",
+    "  - Firefox Driver : https://www.selenium.dev/documentation/webdriver/browsers/firefox/\n",
+    "  - Chrome Driver : https://www.selenium.dev/documentation/webdriver/browsers/chrome/\n",
+    "  - Edge Driver : https://www.selenium.dev/documentation/webdriver/browsers/edge/\n",
+    "  - Finding Elements : https://www.selenium.dev/documentation/webdriver/elements/finders/\n",
+    "  - Visibility : https://www.geeksforgeeks.org/is_displayed-element-method-selenium-python/\n",
+    "  - Getting information about elements : https://www.selenium.dev/documentation/webdriver/elements/information/\n",
+    "  - Element information (HTML) : https://www.w3schools.com/html/default.asp\n",
+    "  - Other advice: Microsoft Copilot (outdated code in terms of finding elements)"
    ]
   },
   {
