--- a/components/table_generator.ipynb
+++ b/components/table_generator.ipynb
@@ -5,7 +5,8 @@
    "metadata": {},
    "source": [
     "##### Table Generator Component\n",
-    "- Purpose (Latest / Final Version): Using LLM Output and Scraper component extra utility functions, create a table or set of tables for viewing in django_app and downloading as csv or pdf"
+    "- Purpose (Latest / Final Version): Using LLM Output and Scraper component extra utility functions, create a table or set of tables for viewing in django_app and downloading as csv or pdf\n",
+    "- dataframe_init() utility function reference : https://www.statology.org/pandas-dataframe-from-dict-with-different-length/"
    ]
   },
   {
@@ -25,7 +26,6 @@
     "\n",
     "## Table Dataframe Initialization\n",
     "# - Creates a Dataframe based on a dictionary\n",
-    "# - Credits to finding this neat utility : \n",
     "def dataframe_init(data):\n",
     "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
     "    return df\n",
