--- a/fine_tuning/dataset_generation_notebook.ipynb
+++ b/fine_tuning/dataset_generation_notebook.ipynb
@@ -352,8 +352,7 @@
     "import pandas as pd\n",
     "\n",
     "## Table Dataframe Initialization\n",
-    "# - Creates a Dataframe based on a dictionary\n",
-    "# - Credits to finding this neat utility : \n",
+    "# - Creates a Dataframe based on a dictionary \n",
     "def dataframe_init(data):\n",
     "    df = pd.DataFrame(dict([(key, pd.Series(value)) for key, value in data.items()]))\n",
     "    return df\n",
@@ -400,9 +399,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Welcome to Dataset Generator\n",
+      "Current URL : https://cis.edu.ph/community/newsflash/\n",
+      "Scraping Finished In : 24907.424926757812, ms\n",
+      "This will take a while to complete: Please wait by doing other things. You will receive a message once generation is complete.\n",
+      "test case 0 out of 111 generated\n",
+      "test case 1 out of 111 generated\n",
+      "test case 2 out of 111 generated\n",
+      "test case 3 out of 111 generated\n",
+      "test case 4 out of 111 generated\n",
+      "test case 5 out of 111 generated\n",
+      "test case 6 out of 111 generated\n",
+      "test case 7 out of 111 generated\n",
+      "test case 8 out of 111 generated\n",
+      "test case 9 out of 111 generated\n",
+      "test case 10 out of 111 generated\n",
+      "test case 11 out of 111 generated\n",
+      "test case 12 out of 111 generated\n",
+      "test case 13 out of 111 generated\n",
+      "test case 14 out of 111 generated\n",
+      "test case 15 out of 111 generated\n",
+      "Generation Finished In : 728729.3212413788, ms\n",
+      "Dataset is Generated as a CSV File (ciseduphcommunitynewsflash.csv).\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "#----------------------------------------------------------------------------------------------------------------------\n",
     "#######################\n",
