--- a/fine_tuning/evaluation_notebook.ipynb
+++ b/fine_tuning/evaluation_notebook.ipynb
@@ -6,7 +6,11 @@
    "source": [
     "### Evaluation Notebook\n",
     "- Evaluating perplexity (Automated evaluation metric)\n",
-    "- Perplexity is calculated using Huggingface"
+    "- Perplexity is calculated using Huggingface\n",
+    "- References:\n",
+    "  - Unsloth sample notebook code\n",
+    "  - Microsoft copilot advice\n",
+    "    - Perplexity https://huggingface.co/spaces/evaluate-metric/perplexity"
    ]
   },
   {
