--- a/fine_tuning/finetuning_evaluation.ipynb
+++ b/fine_tuning/finetuning_evaluation.ipynb
@@ -11,7 +11,10 @@
         "- Code is a slightly modified version of the code provided in the Unsloth Github Repository\n",
         "- Evaluating perplexity (Automated evaluation metrics)\n",
         "- Perplexity is calculated using Huggingface\n",
-        "- Hallucination is calculated using SelfCheckGPT score/s"
+        "- References:\n",
+        "  - Unsloth sample notebook code\n",
+        "  - Microsoft copilot advice\n",
+        "    - Perplexity https://huggingface.co/spaces/evaluate-metric/perplexity"
       ]
     },
     {
