--- a/components/llm.ipynb
+++ b/components/llm.ipynb
@@ -7,7 +7,11 @@
     "#### Large Language Model Component\n",
     "- Used for calling the large language model pipeline in Google Colab to use high-spec GPU for faster LLM inference\n",
     "- To be stored in Google Colab as a python file/script\n",
-    "- Contains a duplicate of prompt generator's LLM related functions (but not iterative), and Modelfile Text for the Ollama Modelfile after Fine Tuning"
+    "- Contains a duplicate of prompt generator's LLM related functions (but not iterative), and Modelfile Text for the Ollama Modelfile after Fine Tuning\n",
+    "- References : \n",
+    "  - OllamaLLM https://python.langchain.com/docs/integrations/llms/ollama/ \n",
+    "  - Modelfile : https://github.com/ollama/ollama/blob/main/docs/modelfile.md\n",
+    "  - Modelfile : https://www.reddit.com/r/ollama/comments/1d3yizz/modelfile_prompt_chat_template_for_llama3_fine/"
    ]
   },
   {
@@ -111,7 +115,7 @@
     "\n",
     "ADAPTER ./\n",
     "\n",
-    "TEMPLATE \"\"\"<|begin_of_text|>{{ if .System }}{{ .System }}{{ end }}\n",
+    "TEMPLATE \"\"\"{{ if .System }}{{ .System }}{{ end }}\n",
     "\n",
     "{{ if .Prompt }}### Instruction:\n",
     "{{ .Prompt }}{{ end }}\n",
@@ -143,20 +147,60 @@
     "### Response:\n",
     "{{ .Response }}<|end_of_text|>\"\"\"\n",
     "\n",
-    "PARAMETER stop \"<|begin_of_text|>\"\n",
     "PARAMETER stop \"<|end_of_text|>\"\n",
     "PARAMETER temperature 0\n",
     "PARAMETER num_predict 2048\n",
     "\n",
+    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
+    "TEMPLATE \"\"\"{{ if .System }}{{ .System }}{{ end }}\n",
+    "\n",
+    "{{ if .Prompt }}### Instruction:\n",
+    "{{ .Prompt }}{{ end }}\n",
+    "\n",
+    "### Input:\n",
+    "\n",
+    "\n",
+    "### Response:\n",
+    "{{ .Response }}<|end_of_text|>\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER temperature 0\n",
+    "PARAMETER num_predict 2048\n",
+    "\n",
+    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "\n",
     "PARAMETER stop \"Note:\"\n",
-    "PARAMETER stop \"The final answer is:\"\n",
+    "PARAMETER stop \"The final answer\"\n",
+    "PARAMETER stop \"The response\"\n",
     "PARAMETER stop \"The expected output should be displayed correctly for all test steps above.\"\n",
     "PARAMETER stop \"EOF\"\n",
     "PARAMETER stop \"###\"\n",
     "PARAMETER stop \"End of Response\"\n",
-    "PARAMETER stop \"```\"\n",
-    "\n",
-    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
+    "PARAMETER stop \"```\""
    ]
   },
   {
@@ -278,6 +322,66 @@
    },
    "source": [
     "## What follows are trials and errors on modelfile creation"
+   ]
+  },
+  {
+   "cell_type": "raw",
+   "metadata": {
+    "vscode": {
+     "languageId": "raw"
+    }
+   },
+   "source": [
+    "FROM llama3.1\n",
+    "\n",
+    "ADAPTER ./\n",
+    "\n",
+    "TEMPLATE \"\"\"<|begin_of_text|>{{ if .System }}{{ .System }}{{ end }}\n",
+    "\n",
+    "{{ if .Prompt }}### Instruction:\n",
+    "{{ .Prompt }}{{ end }}\n",
+    "\n",
+    "### Input:\n",
+    "You are an expert in software quality assurance specializing in usability testing.\n",
+    "\n",
+    "Consider the following usability aspects:\n",
+    "Accessibility (keyboard navigation, screen reader support, etc.)\n",
+    "Responsiveness (behavior across different screen sizes, etc.)\n",
+    "Feedback (hover effects, click responses, error messages, etc.)\n",
+    "Interactivity (expected behavior when clicked, typed into, or focused, etc.)\n",
+    "User experience (clarity of labels, ease of use, etc.)\n",
+    "\n",
+    "Avoid descriptions like \"The user\" or \"The test participant\" and should instead focus on direct, executable actions.\n",
+    "\n",
+    "The functional usability test case has the following aspects, separated by a `~`:\n",
+    "- **Objective**: Clearly state the objective of the test.\n",
+    "- **Preconditions**: List any preconditions that need to be met.\n",
+    "- **Test Steps**: Provide a step-by-step guide for the test. Each step should be a direct command, not a description.\n",
+    "- **Expected Output**: Describe the expected output.\n",
+    "\n",
+    "Output format example, start with the objective directly and avoid saying \"here is the test case\" or the name of the testcase and end the output after writing the expected output:\n",
+    "Objective: [Describe the objective] \n",
+    "~ Preconditions: [List preconditions, use dashes] \n",
+    "~ Test Steps: [Step-by-step guide] \n",
+    "~ Expected Output: [Describe the expected output, use dashes]\n",
+    "\n",
+    "### Response:\n",
+    "{{ .Response }}<|end_of_text|>\"\"\"\n",
+    "\n",
+    "PARAMETER stop \"<|begin_of_text|>\"\n",
+    "PARAMETER stop \"<|end_of_text|>\"\n",
+    "PARAMETER temperature 0\n",
+    "PARAMETER num_predict 2048\n",
+    "\n",
+    "PARAMETER stop \"Note:\"\n",
+    "PARAMETER stop \"The final answer is:\"\n",
+    "PARAMETER stop \"The expected output should be displayed correctly for all test steps above.\"\n",
+    "PARAMETER stop \"EOF\"\n",
+    "PARAMETER stop \"###\"\n",
+    "PARAMETER stop \"End of Response\"\n",
+    "PARAMETER stop \"```\"\n",
+    "\n",
+    "SYSTEM \"\"\"Below is an instruction that describes a task, paired with an input that provides further context. Write a response that appropriately completes the request.\"\"\""
    ]
   },
   {
