pre-branching commit for dynamic results page pt. 1

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -121,7 +121,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "##### Asynchronous Run for Dynamic Results [Experimental]"
+    "##### Asynchronous Run for Dynamic Results [Experimental]\n",
+    "- IDEA: After 3 minutes, refresh table\n",
+    "  - Requirements:\n",
+    "    - Celery\n",
+    "    - Set Get Clear Functions for the session variable of llm_output"
    ]
   },
   {
@@ -130,6 +134,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Use on the generation function\n",
+    "# from celery import shared_task\n",
+    "\n",
+    "# @shared_task\n",
+    "\n",
     "# ## Set Get Clear Functions : for updating the current llm output, clearing llm output, and getting llm output\n",
     "\n",
     "# # Set LLM Output\n",
