frontend implementation pt 2 + asyncio cancellation implementation

--- a/components/prompt_generator.ipynb
+++ b/components/prompt_generator.ipynb
@@ -118,6 +118,57 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "cancel_me(): before sleep\n",
+      "Yes this is actually running\n",
+      "cancel_me(): cancel sleep\n",
+      "cancel_me(): after sleep\n",
+      "main(): cancel_me is cancelled now\n"
+     ]
+    }
+   ],
+   "source": [
+    "### ASYNC Draft\n",
+    "import asyncio\n",
+    "\n",
+    "## function that will be cancelled\n",
+    "async def cancel_me():\n",
+    "    ## Variables and etc.\n",
+    "    print('cancel_me(): before sleep')\n",
+    "\n",
+    "    ## Checker for cancellation (Main Body)\n",
+    "    try:\n",
+    "        # Wait for 1 hour\n",
+    "        print(\"Yes this is actually running\")\n",
+    "        await asyncio.sleep(3600)\n",
+    "    except asyncio.CancelledError : # \n",
+    "        print('cancel_me(): cancel sleep')\n",
+    "        raise\n",
+    "    finally:\n",
+    "        print('cancel_me(): after sleep')\n",
+    "\n",
+    "# Create a \"cancel_me\" Task\n",
+    "task = asyncio.create_task(cancel_me())\n",
+    "# Wait for 1 second\n",
+    "await asyncio.sleep(0)\n",
+    "\n",
+    "# Cancel Task\n",
+    "task.cancel()\n",
+    "\n",
+    "try:\n",
+    "    await task\n",
+    "except asyncio.CancelledError: # asyncio.CancelledError\n",
+    "    print(\"main(): cancel_me is cancelled now\")\n"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
